--- a/main.yml
+++ b/main.yml
@@ -8,13 +8,7 @@
 
   roles:
     - geerlingguy.homebrew
-    - geerlingguy.dotfiles
 
-  tasks:
-    - include: tasks/ansible-setup.yml
-    - include: tasks/preferences.yml
-
-    # TODO: Use sudo once .osx can be run via root with no user interaction.
-    - name: Run .osx dotfiles.
-      shell: ~/.osx --no-restart
-      changed_when: false
+  #tasks:
+  #  - include: tasks/ansible-setup.yml
+  #  - include: tasks/preferences.yml
