Changed path for installing homebrew

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 configure_sudoers: yes
-
+homebrew_install_path: /usr/local/homebrew
 homebrew_installed_packages:
   - ansible
   - boot2docker
