--- a/vars/main.yml
+++ b/vars/main.yml
@@ -14,10 +14,14 @@ homebrew_installed_packages:
   - zsh
   - tmux
   - mercurial
+  - phpmd
+  - php-code-sniffer
+  - php-cs-fixer
 
 homebrew_taps:
   - caskroom/cask
   - caskroom/versions
+  - homebrew/php
 
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
@@ -32,3 +36,37 @@ homebrew_cask_apps:
   - slack
   - istat-menus
   - atom
+
+dockitems_to_remove:
+  - Launchpad
+  - Mail
+  - Safari
+  - Contacts
+  - Notes
+  - Reminders
+  - Maps
+  - Photos
+  - Messages
+  - FaceTime
+  - iTunes
+  - iBooks
+  - App Store
+  - System Preferences
+  - Calendar
+
+dockitems_to_persist:
+  - name: Google Chrome
+    path: "/Applications/Google Chrome.app"
+    pos: 1
+  - name: Firefox
+    path: "/Applications/Firefox.app"
+    pos: 2
+  - name: PhpStorm
+    path: /Applications/PhpStorm.app
+    pos: 3
+  - name: Slack
+    path: /Applications/Slack.app
+    pos: 4
+  - name: Terminal
+    path: /Applications/Utilities/Terminal.app
+    pos: 5
