--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,29 +2,13 @@
 homebrew_install_path: /usr/local/homebrew
 homebrew_installed_packages:
   - ansible
-  - docker
   - git
-  - ssh-copy-id
   - wget
   - dockutil
-  - zsh
-  - tmux
-  - mercurial
-  - phpmd
-  - php-code-sniffer
-  - php-cs-fixer
-  - phpunit
-  - php70
-  - php70-intl
-  - php70-imagick
-  - php70-mcrypt
-  - tree
   - npm
-  - yarn
-  - docker-compose
-  - docker-machine-nfs
-  - composer
   - git-extras
+  - cocoapods
+  - swiftlint
 
 homebrew_taps:
   - caskroom/cask
@@ -34,66 +18,41 @@ homebrew_taps:
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
   - google-chrome
-  - firefox
-  - vagrant
   - virtualbox
-  - phpstorm
   - slack
-  - istat-menus
-  - atom
-  - android-file-transfer
-  - spotify
-  - hipchat
+  - sublime-text
+  - skype
 
 dockitems_to_remove:
   - Launchpad
   - Mail
-  - Safari
-  - Contacts
   - Notes
-  - Reminders
-  - Maps
-  - Photos
-  - Messages
-  - FaceTime
-  - iTunes
-  - iBooks
   - App Store
   - System Preferences
   - Calendar
-  - Siri
 
 dockitems_to_persist:
   - name: Google Chrome
     path: "/Applications/Google Chrome.app"
     pos: 1
-  - name: Firefox
-    path: "/Applications/Firefox.app"
-    pos: 2
-  - name: PhpStorm
-    path: /Applications/PhpStorm.app
-    pos: 3
   - name: Slack
     path: /Applications/Slack.app
-    pos: 4
+    pos: 2
+  - name: Skype
+    path: /Applications/Skype.app
+    pos: 3
   - name: VirtualBox
     path: /Applications/VirtualBox.app
-    pos: 5
+    pos: 4
   - name: Terminal
     path: /Applications/Utilities/Terminal.app
+    pos: 5
+  - name: Sublime Text
+    path: /Applications/Utilities/Sublime Text.app
     pos: 6
-  - name: Spotify
-    path: /Applications/Spotify.app
+  - name: Xcode
+    path: /Applications/Utilities/Xcode.app
     pos: 7
-  - name: HipChat
-    path: /Applications/HipChat.app
-    pos: 8
 
 
 npm_packages:
-  - grunt
-  - bower
-  - sass
-  - webpack
-  - yo
-  - generator-webapp
